src/components/TaskItem/TaskItem.module.scss
@mixin _task-item-highlight {
  background-color: rgba(255, 255, 255, 0.3);
  box-shadow: 0 0 5px #333;
}

.taskItem {
  display: flex;
  border-radius: 10px;
  padding: 15px;
  background-color: rgba(255, 255, 255, 0.2);
  cursor: grab;
  transition:
    background-color 0.3s,
    box-shadow 0.3s;
  animation: appear 0.5s;

  @include hover-supported {
    &:hover {
      @include _task-item-highlight;
    }
  }

  &:active {
    @include _task-item-highlight;
    cursor: grabbing;
  }

  &.isDragging {
    @include _task-item-highlight;
  }
}

.text {
  flex: 1;
  margin: 0px 10px;
  font-size: 20px;
  line-height: 30px;
  word-wrap: break-word;
  min-width: 0;
}

input.text {
  font-family: inherit;
  background-color: transparent;
  color: var(--theme-text-input);
  margin: 0px 5px;
  padding: 0px 5px;
  box-shadow: 0 4px 0 -3px whitesmoke;

  &:focus {
    box-shadow: inset 0 0 5px #e3e3e3;
  }
}

.controlButton {
  background-color: transparent;
  padding: 5px;

  &:not(:last-child) {
    margin-right: 5px;
  }

  &:not(:disabled) {
    color: #000;
  }

  & svg {
    @include icon-size(20px);
    transition: transform 0.2s;
  }

  @include hover-supported {
    &:hover svg {
      transform: scale(1.2);
    }
  }

  &:active svg {
    transform: scale(1);
  }
}

@media (max-width: $tablet) {
  .taskItem {
    padding: 10px;
  }

  .text {
    font-size: 18px;
    line-height: 28px;
  }

  .controlButton svg {
    @include icon-size(18px);
  }
}

@media (max-width: $mobileSmall) {
  .taskItem {
    padding: 10px 5px;
  }

  .text {
    font-size: 16px;
    margin: 0px 5px;
  }

  input.text {
    margin: 0px 2.5px;
    padding: 0px 2.5px;
  }
}

@keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

